2011-09-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_delete_alerts.php,
	godmode/massive/massive_edit_modules.php,
	operation/agentes/ver_agente.php: Added group recursion	feature,
	it allows to search agents in child groups. These three changes
	are contributed by Yusuke Arai. Thanks!

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Fixed css style in this view.
	
	Fixes: #3400123

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed css style in this view.
	
	Fixes: #3397522

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php: Fixed function agents_get_modules()
	where modules are retrieve.

2011-09-02  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/config_process.php: set by default the mysql connection type
	because in older isntallations update to 4 have not this token in
	config.php.
	
	Fixes: #3395947

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_alerts.php: fixed alerts_get_alert_agent_module_actions()
	function to avoid PHP warnings on alert compound display.

2011-09-02  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_action_alerts.php: Added group recursion
	feature, it allows to search agents in child groups.

2011-09-01 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Improved detecting mime types

	Fixes: #3389654

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/incidents/incident_detail.php: fixed the entities in the name
	of file in the action to upload and delete.
	
	Fixes: #3397447

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_agents.php: added the other part of logical expression
	in the patch of strstr. 

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	