@@ -1,3 +1,10 @@
+2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* godmode/gis_maps/configure_gis_map.php: fixed the form to create or
+	update gis connections.
+	
+	Fixes: #3403160
+
 2011-09-03  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/massive/massive_delete_alerts.php,
